gen/MainParser.java
// Generated from /home/heqro/IdeaProjects/PracticaAntlr/src/Main.g4 by ANTLR 4.10.1

    import java.util.Arrays;
    import java.util.HashMap;
    import java.util.Map;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MainParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, NUMERIC_INTEGER_CONST=42, NUMERIC_REAL_CONST=43, 
		STRING_CONST=44, COMMENT_LINE=45, COMMENT_BLOCK=46, IDENTIFIER=47, IGNORE=48, 
		DIG=49, INT=50;
	public static final int
		RULE_prg = 0, RULE_blq = 1, RULE_dcllist = 2, RULE_sentlist = 3, RULE_sentlistFactor = 4, 
		RULE_dcl = 5, RULE_defcte = 6, RULE_ctelist = 7, RULE_ctelistFactor = 8, 
		RULE_simpvalue = 9, RULE_defvar = 10, RULE_defvarlist = 11, RULE_defvarlistFactor = 12, 
		RULE_varlist = 13, RULE_varlistFactor = 14, RULE_defproc = 15, RULE_deffun = 16, 
		RULE_formal_paramlist = 17, RULE_formal_param = 18, RULE_formal_paramFactor = 19, 
		RULE_tbas = 20, RULE_sent = 21, RULE_sentFactor = 22, RULE_asig = 23, 
		RULE_exp = 24, RULE_expFactor = 25, RULE_op = 26, RULE_factor = 27, RULE_subpparamlist = 28, 
		RULE_explist = 29, RULE_explistFactor = 30, RULE_proc_call = 31, RULE_inc = 32, 
		RULE_expcond = 33, RULE_expcondFactor = 34, RULE_oplog = 35, RULE_factorcond = 36, 
		RULE_opcomp = 37;
	private static String[] makeRuleNames() {
		return new String[] {
			"prg", "blq", "dcllist", "sentlist", "sentlistFactor", "dcl", "defcte", 
			"ctelist", "ctelistFactor", "simpvalue", "defvar", "defvarlist", "defvarlistFactor", 
			"varlist", "varlistFactor", "defproc", "deffun", "formal_paramlist", 
			"formal_param", "formal_paramFactor", "tbas", "sent", "sentFactor", "asig", 
			"exp", "expFactor", "op", "factor", "subpparamlist", "explist", "explistFactor", 
			"proc_call", "inc", "expcond", "expcondFactor", "oplog", "factorcond", 
			"opcomp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'PROGRAM'", "';'", "'.'", "'BEGIN'", "'END'", "'CONST'", "'='", 
			"'VAR'", "':'", "','", "'PROCEDURE'", "'FUNCTION'", "'('", "')'", "'integer'", 
			"'real'", "'IF'", "'THEN'", "'ELSE'", "'WHILE'", "'DO'", "'REPEAT'", 
			"'UNTIL'", "'FOR'", "':='", "'+'", "'-'", "'*'", "'DIV'", "'MOD'", "'TO'", 
			"'DOWNTO'", "'OR'", "'AND'", "'NOT'", "'TRUE'", "'FALSE'", "'<'", "'>'", 
			"'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "NUMERIC_INTEGER_CONST", "NUMERIC_REAL_CONST", 
			"STRING_CONST", "COMMENT_LINE", "COMMENT_BLOCK", "IDENTIFIER", "IGNORE", 
			"DIG", "INT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Main.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    public String formatearReservada(String cadena){
	            return "<SPAN CLASS=\"palres\">"+cadena+"</SPAN>";
	    }

	    public String formatear(String cadenaUnica, String cadenaBloque, Map<String,String> identificadores) {
	        if(!identificadores.containsKey(cadenaUnica)){
	            return "<SPAN CLASS=\"ctesindeclarar\">"+cadenaBloque+"</SPAN>";
	        }
	        if (identificadores.get(cadenaUnica).equals("funcion")) { // Caso particular: asignamos a una función un valor.
	            int subcadenaFin = cadenaUnica.lastIndexOf(':');
	            String subcadena = cadenaUnica.substring(0,subcadenaFin-1);
	            return "<SPAN CLASS=\"procFunc\"> <a href=\"#"+subcadena+"\">"+cadenaBloque+"</a></SPAN>";
	        }
	        return "<SPAN CLASS=\""+identificadores.get(cadenaUnica)+"\"> <a href=\"#"+cadenaUnica+"\">"+cadenaBloque+"</a></SPAN>";
	    }

	    public String generarClave(String claveInicial, Map<String,String> identificadores) {
	        while(identificadores.containsKey(claveInicial))
	            claveInicial += "1";
	        return claveInicial;
	    }



	public MainParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PrgContext extends ParserRuleContext {
		public Token IDENTIFIER;
		public BlqContext blq;
		public TerminalNode IDENTIFIER() { return getToken(MainParser.IDENTIFIER, 0); }
		public BlqContext blq() {
			return getRuleContext(BlqContext.class,0);
		}
		public PrgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterPrg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitPrg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitPrg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrgContext prg() throws RecognitionException {
		PrgContext _localctx = new PrgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(T__0);
			setState(77);
			((PrgContext)_localctx).IDENTIFIER = match(IDENTIFIER);

			            System.out.println("<a NAME=\"inicioPrograma\"><H1> Programa: "+(((PrgContext)_localctx).IDENTIFIER!=null?((PrgContext)_localctx).IDENTIFIER.getText():null)+"</H1></a>");
			        
			setState(79);
			match(T__1);

			            HashMap<String,String> map = new HashMap<String,String>();
			            String nombreBloque = "0main"; // aprovechamos que no se pueden declarar variables que empiecen por un número
			        
			setState(81);
			((PrgContext)_localctx).blq = blq(map, nombreBloque);

			            // Lista de cabeceras de procedimientos y funciones
			            System.out.println("<HR><H2>Funciones y procedimientos</H2>");
			            System.out.println("<UL>"+((PrgContext)_localctx).blq.procYFunc+"</UL>\n<HR/>");

			            // Código de todas las funciones y procedimientos
			            System.out.println(((PrgContext)_localctx).blq.codigoProc);
			            System.out.println(((PrgContext)_localctx).blq.codigoFunc);

			            // Declaraciones y sentencias del programa principal
			            System.out.println("<a NAME=\"inicioMain\"><HR/> \n <H2> Programa principal </H2></a>");
			                // Mostramos primero constantes y variables
			            //System.out.println(((PrgContext)_localctx).blq.constantes);
			            //System.out.println(((PrgContext)_localctx).blq.variables);
			                // Mostrar el código principal
			            System.out.println(((PrgContext)_localctx).blq.codigo + ".");
			            System.out.println("<div class=\"moverse\"><a href=\"#inicioPrograma\">Comienzo de la web</a></div>");
			            System.out.println("<div class=\"moverse\"><a href=\"#inicioMain\">Comienzo del programa principal</a></div>");
			        
			setState(83);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlqContext extends ParserRuleContext {
		public Map<String,String> map;
		public String nombreBloque;
		public String procYFunc;
		public String codigo;
		public String constantes;
		public String variables;
		public String codigoProc;
		public String codigoFunc;
		public String codigoFuncProcLocal;
		public DcllistContext dcllist;
		public SentlistContext sentlist;
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public BlqContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public BlqContext(ParserRuleContext parent, int invokingState, Map<String,String> map, String nombreBloque) {
			super(parent, invokingState);
			this.map = map;
			this.nombreBloque = nombreBloque;
		}
		@Override public int getRuleIndex() { return RULE_blq; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterBlq(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitBlq(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitBlq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlqContext blq(Map<String,String> map,String nombreBloque) throws RecognitionException {
		BlqContext _localctx = new BlqContext(_ctx, getState(), map, nombreBloque);
		enterRule(_localctx, 2, RULE_blq);
		try {
			enterOuterAlt(_localctx, 1);
			{

			        Map<String,String> dcllistMap = new HashMap<>();
			        dcllistMap.putAll(_localctx.map);
			    
			setState(86);
			((BlqContext)_localctx).dcllist = dcllist(dcllistMap, nombreBloque);

			            ((BlqContext)_localctx).codigo =  ((BlqContext)_localctx).dcllist.codigo;
			            ((BlqContext)_localctx).constantes =  ((BlqContext)_localctx).dcllist.constantes;
			            ((BlqContext)_localctx).variables =  ((BlqContext)_localctx).dcllist.variables;
			            ((BlqContext)_localctx).codigoFuncProcLocal =  ((BlqContext)_localctx).dcllist.codigoFuncProcLocal;
			    
			setState(88);
			match(T__3);
			setState(89);
			((BlqContext)_localctx).sentlist = sentlist(dcllistMap, nombreBloque);
			setState(90);
			match(T__4);

			        _localctx.codigo += ((BlqContext)_localctx).dcllist.variables + ((BlqContext)_localctx).dcllist.constantes;
			        _localctx.codigo += formatearReservada("BEGIN") + "<div style=\"margin-left:1cm\">" +
			                                    ((BlqContext)_localctx).sentlist.codigo +
			                                    "</div>"+ formatearReservada("END");
			        ((BlqContext)_localctx).procYFunc =  ((BlqContext)_localctx).dcllist.procYFunc + ((BlqContext)_localctx).sentlist.procYFunc;
			        ((BlqContext)_localctx).codigoProc =  ((BlqContext)_localctx).dcllist.codigoProc + ((BlqContext)_localctx).sentlist.codigoProc;
			        ((BlqContext)_localctx).codigoFunc =  ((BlqContext)_localctx).dcllist.codigoFunc + ((BlqContext)_localctx).sentlist.codigoFunc;
			        _localctx.codigoFuncProcLocal += ((BlqContext)_localctx).sentlist.codigoFuncProcLocal;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DcllistContext extends ParserRuleContext {
		public Map<String, String> map;
		public String nombreBloque;
		public String procYFunc;
		public String codigo;
		public String constantes;
		public String variables;
		public String codigoProc;
		public String codigoFunc;
		public String codigoFuncProcLocal;
		public DclContext dcl;
		public DcllistContext dcllist;
		public DclContext dcl() {
			return getRuleContext(DclContext.class,0);
		}
		public DcllistContext dcllist() {
			return getRuleContext(DcllistContext.class,0);
		}
		public DcllistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public DcllistContext(ParserRuleContext parent, int invokingState, Map<String, String> map, String nombreBloque) {
			super(parent, invokingState);
			this.map = map;
			this.nombreBloque = nombreBloque;
		}
		@Override public int getRuleIndex() { return RULE_dcllist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterDcllist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitDcllist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitDcllist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DcllistContext dcllist(Map<String, String> map,String nombreBloque) throws RecognitionException {
		DcllistContext _localctx = new DcllistContext(_ctx, getState(), map, nombreBloque);
		enterRule(_localctx, 4, RULE_dcllist);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{

				        ((DcllistContext)_localctx).procYFunc =  "";
				        ((DcllistContext)_localctx).codigo =  "";
				        ((DcllistContext)_localctx).constantes =  "";
				        ((DcllistContext)_localctx).variables =  "";
				        ((DcllistContext)_localctx).codigoProc =  "";
				        ((DcllistContext)_localctx).codigoFunc =  "";
				        ((DcllistContext)_localctx).codigoFuncProcLocal =  "";
				    
				}
				break;
			case T__5:
			case T__7:
			case T__10:
			case T__11:
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				((DcllistContext)_localctx).dcl = dcl(_localctx.map, _localctx.nombreBloque);
				setState(95);
				((DcllistContext)_localctx).dcllist = dcllist(_localctx.map, _localctx.nombreBloque);

				        ((DcllistContext)_localctx).procYFunc =  ((DcllistContext)_localctx).dcl.procYFunc+((DcllistContext)_localctx).dcllist.procYFunc;
				        ((DcllistContext)_localctx).codigo =  ((DcllistContext)_localctx).dcl.codigo+((DcllistContext)_localctx).dcllist.codigo;
				        ((DcllistContext)_localctx).constantes =  ((DcllistContext)_localctx).dcl.constantes + ((DcllistContext)_localctx).dcllist.constantes;
				        ((DcllistContext)_localctx).variables =  ((DcllistContext)_localctx).dcl.variables + ((DcllistContext)_localctx).dcllist.variables;
				        ((DcllistContext)_localctx).codigoProc =  ((DcllistContext)_localctx).dcl.codigoProc + ((DcllistContext)_localctx).dcllist.codigoProc;
				        ((DcllistContext)_localctx).codigoFunc =  ((DcllistContext)_localctx).dcl.codigoFunc + ((DcllistContext)_localctx).dcllist.codigoFunc;
				        ((DcllistContext)_localctx).codigoFuncProcLocal =  ((DcllistContext)_localctx).dcl.codigoFuncProcLocal + ((DcllistContext)_localctx).dcllist.codigoFuncProcLocal;
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentlistContext extends ParserRuleContext {
		public Map<String, String> map;
		public String nombreBloque;
		public String codigo;
		public String procYFunc;
		public String codigoFunc;
		public String codigoProc;
		public String codigoFuncProcLocal;
		public SentContext sent;
		public SentlistFactorContext sentlistFactor;
		public SentContext sent() {
			return getRuleContext(SentContext.class,0);
		}
		public SentlistFactorContext sentlistFactor() {
			return getRuleContext(SentlistFactorContext.class,0);
		}
		public SentlistContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SentlistContext(ParserRuleContext parent, int invokingState, Map<String, String> map, String nombreBloque) {
			super(parent, invokingState);
			this.map = map;
			this.nombreBloque = nombreBloque;
		}
		@Override public int getRuleIndex() { return RULE_sentlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterSentlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitSentlist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitSentlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentlistContext sentlist(Map<String, String> map,String nombreBloque) throws RecognitionException {
		SentlistContext _localctx = new SentlistContext(_ctx, getState(), map, nombreBloque);
		enterRule(_localctx, 6, RULE_sentlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			((SentlistContext)_localctx).sent = sent(_localctx.map, _localctx.nombreBloque);
			setState(101);
			((SentlistContext)_localctx).sentlistFactor = sentlistFactor(_localctx.map, _localctx.nombreBloque);

			        ((SentlistContext)_localctx).codigo =  ((SentlistContext)_localctx).sent.sentencia+((SentlistContext)_localctx).sentlistFactor.codigo;
			        ((SentlistContext)_localctx).procYFunc =  ((SentlistContext)_localctx).sent.procYFunc + ((SentlistContext)_localctx).sentlistFactor.procYFunc;
			        ((SentlistContext)_localctx).codigoFunc =  ((SentlistContext)_localctx).sent.codigoFunc + ((SentlistContext)_localctx).sentlistFactor.codigoFunc;
			        ((SentlistContext)_localctx).codigoProc =  ((SentlistContext)_localctx).sent.codigoProc + ((SentlistContext)_localctx).sentlistFactor.codigoProc;
			        ((SentlistContext)_localctx).codigoFuncProcLocal =  ((SentlistContext)_localctx).sent.codigoFuncProcLocal + ((SentlistContext)_localctx).sentlistFactor.codigoFuncProcLocal;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentlistFactorContext extends ParserRuleContext {
		public Map<String, String> map;
		public String nombreBloque;
		public String codigo;
		public String procYFunc;
		public String codigoFunc;
		public String codigoProc;
		public String codigoFuncProcLocal;
		public SentlistContext sentlist;
		public SentlistContext sentlist() {
			return getRuleContext(SentlistContext.class,0);
		}
		public SentlistFactorContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SentlistFactorContext(ParserRuleContext parent, int invokingState, Map<String, String> map, String nombreBloque) {
			super(parent, invokingState);
			this.map = map;
			this.nombreBloque = nombreBloque;
		}
		@Override public int getRuleIndex() { return RULE_sentlistFactor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).enterSentlistFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MainListener ) ((MainListener)listener).exitSentlistFactor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MainVisitor ) return ((MainVisitor<? extends T>)visitor).visitSentlistFactor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentlistFactorContext sentlistFactor(Map<String, String> map,String nombreBloque) throws RecognitionException {
		SentlistFactorContext _localctx = new SentlistFactorContext(_ctx, getState(), map, nombreBloque);
		enterRule(_localctx, 8, RULE_sentlistFactor);
		try {
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{

				    ((SentlistFactorContext)_localctx).codigo =  "";
				    ((SentlistFactorContext)_localctx).procYFunc =  "";
				    ((SentlistFactorContext)_localctx).codigoFunc =  "";
				    ((SentlistFactorContext)_localctx).codigoProc =  "";
				    ((SentlistFactorContext)_localctx).codigoFuncProcLocal =  "";
				  
				}
				break;
			case T__16:
			case T__19:
			case T__21:
			case T__23:
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(105);
				((SentlistFactorContext)_localctx).sentlist = sentlist(_localctx.map, _localctx.nombreBloque);
